syntax = "proto3";

option go_package = "github.com/kytruong0712/goffee-shop/menu-service/internal/handler/grpc/protobuf";

import "timestamppb/timestamp.proto";

service Menu {
  rpc CreateCategory(CreateCategoryRequest) returns (Category);
}

enum CategoryStatus {
  ACTIVE = 0;
  INACTIVE = 1;
}

message CreateCategoryRequest {
  string name = 1 [json_name = "name"];
  string description = 2  [json_name = "description"];
  CategoryStatus status = 3 [json_name = "status"];
}

message Category {
  int64 id = 1 [json_name = "id"];
  string name = 2 [json_name = "name"];
  string description = 3  [json_name = "description"];
  CategoryStatus status = 4 [json_name = "status"];
  google.protobuf.Timestamp created_at = 5 [json_name = "created_at"];
  google.protobuf.Timestamp updated_at = 6 [json_name = "updated_at"];
}